# nonebot_plugin_jrrp2

./: .gitignore  LICENSE  README.md  pyproject.toml
nonebot_plugin_jrrp2/: __init__.py
